# 1.4.17

* When extracting raw text, convert tab elements to tab characters.

# 1.4.16

* Handle w:num with invalid w:abstractNumId.

# 1.4.15

* Convert symbols in supported fonts to corresponding Unicode characters.

# 1.4.14

* Support numbering defined by paragraph style.

# 1.4.13

* Add style mapping for all caps.

# 1.4.12

* Handle underline elements where w:val is "none".

# 1.4.11

* Read font size for runs.
* Support soft hyphens.

# 1.4.10

* Update supported Python versions to 2.7 and 3.4 to 3.8.

# 1.4.9

* Improve list support by following w:numStyleLink in w:abstractNum.

# 1.4.8

* Preserve empty table rows.

# 1.4.7

* Always write files as UTF-8 in the CLI.

# 1.4.6

* Fix: default style mappings caused footnotes, endnotes and comments
  containing multiple paragraphs to be converted into a single paragraph.

# 1.4.5

* Read the children of v:rect elements.

# 1.4.4

* Parse paragraph indents.

* Read part paths using relationships. This improves support for documents
  created by Word Online.

# 1.4.3

* Add style mapping for small caps.

* Add style mapping for tables.

# 1.4.2

* Read children of v:group elements.

# 1.4.1

* Read w:noBreakHyphen elements as non-breaking hyphen characters.

# 1.4.0

* Extract the default data URI image converter to the images module.

* Add anchor on hyperlinks as fragment if present.

* Convert target frames on hyperlinks to targets on anchors.

* Detect header rows in tables and convert to thead > tr > th.

# 1.3.5

* Handle complex fields that do not have a "separate" fldChar.

# 1.3.4

* Add transforms.run.

# 1.3.3

* Read children of w:object elements.

* Add support for document transforms.

# 1.3.2

* Handle hyperlinks created with complex fields.

# 1.3.1

* Handle absolute paths within zip files. This should fix an issue where some
  images within a document couldn't be found.

# 1.3.0

* Allow style names to be mapped by prefix. For instance:

      r[style-name^='Code '] => code
