@@ -2,6 +2,8 @@
 
 * When extracting raw text, convert tab elements to tab characters.
 
+* Handle internal hyperlinks created with complex fields.
+
 # 1.4.16
 
 * Handle w:num with invalid w:abstractNumId.
